--- a/ALURAFLIX/DESAFIO-5/index.html
+++ b/ALURAFLIX/DESAFIO-5/index.html
@@ -1,10 +1,11 @@
-<html>
+<html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
     <title>
         Imersão Dev - Aula 05
     </title>
-    <link href="style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -12,8 +13,7 @@
         <h1 class="page-title">
             Aluraflix
         </h1>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo"
-            alt="">
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
         <p class="page-subtitle">
             Qual seu filme favorito?
         </p>
@@ -26,7 +26,7 @@
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-    <script src="script.js"></script>   
+    <script src="script.js"></script>
 </body>
 
 </html>
